# dora

./: README.md
backend/: database.py  main.py  models.py  populate.py  projects.db  pyproject.toml  qdrant.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Homepage.tsx  ProjectCard.tsx  ProjectDetailPage.tsx  ProjectModal.tsx  ProjectsPage.tsx  main.tsx  projects.ts
